--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     
     <!-- 插件 -->
-    <script src="../dashboard-plugin-bundle.js"></script>
+    <script src="./dashboard-plugin-bundle.js"></script>
     
     <!-- 测试脚本 -->
     <script>
